# chat_store

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
alembic/: env.py
scripts/: entrypoint.sh
src/chat_store/: dependencies.py  main.py
src/chat_store/api/v1/: api.py
src/chat_store/api/v1/endpoints/: sessions.py
src/chat_store/core/: config.py  logger.py  middleware.py  rate_limiter.py
src/chat_store/db/: base.py  init_db.py
src/chat_store/models/: __init__.py  message.py  session.py
src/chat_store/repositories/: base.py  message_repository.py  session_repository.py
src/chat_store/schemas/: message.py  session.py
src/chat_store/services/: auth.py  message_service.py  session_service.py
tests/: conftest.py  fixtures_summary.py  test_fixtures.py  test_rate_limiting.py
tests/fixtures/: README.md  __init__.py  auth_fixtures.py  database_fixtures.py  model_fixtures.py  schema_fixtures.py
tests/unit/: test_message_repository.py  test_models.py  test_session_repository.py
